--- a/style.css
+++ b/style.css
@@ -92,9 +92,13 @@ ion-icon{
     cursor: pointer;
 }
 
+.Copyright{
+    font-size: 1.5rem;
+}
+
 @media(max-width: 1000px) {
     .container{
-        margin: 20% auto;
+        margin: 30% auto;
     }
 }
 
